--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,37 @@ body {
     line-height: 18px;
     padding: 0 35px;
     color: #fff;
-    transition: all 0.3s ease-out
+    transition: all 0.3s ease-out;
+    position: relative;
+    z-index: 0;
+}
+
+.footer__form-btn:before {
+    content: "";
+    background-image: linear-gradient(to right, #1a92c3, #2bd885, #1dce79, #27d07f);
+    position: absolute;
+    top: 0;
+    left: auto;
+    right: 0;
+    width: 0%;
+    height: 100%;
+    transition: width, 0.3s ease;
+    color: white;
+    z-index: -1;
+
+}
+
+.footer__form-btn:hover:before {
+    content: "";
+    background-image: linear-gradient(to right, #1a92c3, #2bd885, #1dce79, #27d07f);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    color: white;
+    z-index: -1;
 }
 
 .footer__logo {
